--- a/.github/workflows/cloudman-deploy.yml
+++ b/.github/workflows/cloudman-deploy.yml
@@ -1,13 +1,16 @@
 name: Cloudman Pipeline
+
 on:
   push:
-    paths: ['**/manifest.json']
+    paths:
+      - '**/manifest.json'
 
 permissions:
-  id-token: write
-  contents: read
+  id-token: write  
+  contents: read    
 
 jobs:
   infrastructure:
-    # Chama o engine sem passar argumentos, pois o engine lê tudo do manifesto
+    name: Call GitOps Engine
     uses: CloudManPro/cloudman-core/.github/workflows/engine.yml@main
+    secrets: inherit
